Removed some yarn files...maybe I'll go back to nam

--- a/PluralTodo/package.json
+++ b/PluralTodo/package.json
@@ -36,25 +36,17 @@
     "react-native": "^0.49.5"
   },
   "eslintConfig": {
-    "root": true,
     "parser": "babel-eslint",
     "env": {
-      "browser": true,
-      "node": true,
-      "jquery": true
+      "browser": true
     },
-    "rules": {
-      "quotes": 0,
-      "no-trailing-spaces": 0,
-      "eol-last": 0,
-      "no-unused-vars": 0,
-      "no-underscore-dangle": 0,
-      "no-alert": 0,
-      "no-lone-blocks": 0
-    },
-    "globals": {
-      "jQuery": true,
-      "$": true
-    }
+    "plugins": [
+      "react"
+    ],
+    "extends": [
+      "eslint:recommended",
+      "plugin:react/recommended"
+    ],
+    "rules": {}
   }
 }
